--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+4
+  http: ^0.13.0
   cached_network_image: ^2.0.0
-  image_gallery_saver: ^1.2.2
+  image_gallery_saver: ^1.7.1
   permission_handler: ^4.2.0+hotfix.3
   random_string: ^2.0.1
-  dio: ^3.0.9
+  dio: ^4.0.0
   url_launcher: ^5.4.2
   url_launcher_web: ^0.1.1+1
 
