--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="wallpaper"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -50,5 +53,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+   
     </application>
 </manifest>
