--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   dio: ^4.0.0
   url_launcher: ^5.4.2
   url_launcher_web: ^0.1.1+1
+  firebase_admob: ^0.11.2
+  #admob_flutter: ^1.0.1
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
